More fixes after RemoteIndex's change to represent local folder as URL